--- a/setup/references.yaml
+++ b/setup/references.yaml
@@ -1,21 +1,41 @@
+---
 references:
-  - id: TestEintrag1
-    type: article
-    author:
-      - family: Mustermann
-        given: Max
-    title: "Ein einfacher Testartikel"
-    container-title: "Beispiel-Zeitschrift"
-    issued:
-      year: 2024
+- id: internationalorganizationforstandardizationISO3100020182018
+  author:
+    - literal: International Organization for Standardization
+  citation-key: internationalorganizationforstandardizationISO3100020182018
+  event-place: Geneva, Switzerland
+  issued:
+    - year: 2018
+  language: English
+  note: 'Nummer: ISO 31000:2018'
+  publisher: ISO
+  publisher-place: Geneva, Switzerland
+  title: ISO 31000:2018 – Risk management — Guidelines
+  title-short: ISO 31000
+  type: book
+  URL: https://www.iso.org/standard/65694.html
 
-  - id: TestEintrag2
-    type: article
-    author:
-      - family: Musterfrau
-        given: Erika
-    title: "Ein weiterer Testartikel"
-    container-title: "Test-Journal"
-    issued:
-      year: 2023
-
+- id: sauterDecisionSupportSystems2011
+  accessed:
+    - year: 2025
+      month: 11
+      day: 3
+  author:
+    - family: Sauter
+      given: Vicki L.
+  citation-key: sauterDecisionSupportSystems2011
+  DOI: 10.1002/9780470634431
+  edition: '1'
+  ISBN: 978-0-470-43374-4 978-0-470-63443-1
+  issued:
+    - year: 2011
+      month: 1
+      day: 7
+  language: en
+  publisher: Wiley
+  source: DOI.org (Crossref)
+  title: Decision Support Systems for Business Intelligence
+  type: book
+  URL: https://onlinelibrary.wiley.com/doi/book/10.1002/9780470634431
+...
